sandbox/output
Patient.java:18: error: cannot find symbol
        return calculateOverlappedDays(clashingMedicines);
               ^
  symbol:   method calculateOverlappedDays(List<Medicine>)
  location: class Patient
1 error
